<resources>
    <string name="app_name">Blood Donor</string>
    <string name="donateroes">Donateroes</string>
    <string name="save_lives_by_giving">Save lives by giving</string>
    <string name="skip_now">Skip now</string>
    <string name="learn_more">Learn more</string>
    <string name="quick_search">Quick Search</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign in</string>
    <string name="phone">Phone*</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_sign_in_to_your_account">Please Sign in To your account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="district">District</string>
    <string name="area">Area</string>
    <string name="blood_group">Blood group</string>
    <string name="gender">Gender</string>
    <string name="religion">Religion</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset">Reset</string>
    <string name="verification_code">Verification Code</string>
    <string name="we_will_send_you_a_verification_code_on_your_phone">We will send you a verification code on your phone</string>
    <string name="didn_t_recieve_code">Didn’t recieve code?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="continiue">Continiue</string>
    <string name="please_set_your">Please Set Your</string>
    <string name="new_password">New Password</string>
    <string name="type_new_password">Type New Password</string>
    <string name="re_type_new_password">Re-Type New Password</string>
    <string name="save">Save</string>
    <string name="you_have_successfully_reset_your_password">You Have Successfully Reset Your Password</string>
    <string name="go_to_dashboard">Go To Dashboard</string>
    <string name="home">Home</string>
    <string name="seekers">Seekers</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_looking_for_blood">Are you looking for blood?</string>
    <string name="new_blood_request">New Blood Request</string>
    <string name="people_have_donated">People have donated</string>
    <string name="search_donor">Search Donor</string>
    <string name="create_blood_request">Create blood request</string>
    <string name="available_to_donate">Available To Donate</string>
    <string name="days">Days</string>
    <string name="emergency_donater">Emergency Donater</string>
    <string name="_24_7_available">24/7 available</string>
    <string name="manage_address">Manage Address</string>
    <string name="history">History</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="invite">Invite</string>
    <string name="help_centre">Help Centre</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="seeker_requests">Seeker requests</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="select_district">Select District</string>
    <string name="select_area">Select Area</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_hospital">Select Hospital</string>
    <string name="select_religion">Select Religion</string>
    <string name="search">Search</string>
</resources>