<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_color"
        tools:context=".SecondSplashActivity">

        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/splash_icon" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_sign_in"
            android:layout_marginBottom="120dp"
            android:gravity="center_horizontal">


            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/splash_icon_2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-4dp"
                android:layout_toRightOf="@+id/icon"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans"
                    android:text="@string/donateroes"
                    android:textColor="@color/white"
                    android:textSize="35dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans"
                    android:text="@string/save_lives_by_giving"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="italic" />
            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_create_account"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:padding="16dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/theme_color"
            android:textSize="20dp"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_account"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/quick_search"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:padding="16dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:cornerRadius="12dp"
            app:strokeColor="@color/white" />


        <Button
            android:id="@+id/quick_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/quick_search"
            android:textColor="@color/theme_color"
            android:textFontWeight="600"
            app:backgroundTint="@color/white" />


        <RelativeLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learn_more"
                android:textColor="@color/white"
                android:textSize="14dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:gravity="right"
                android:text="@string/skip_now"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </RelativeLayout>


    </RelativeLayout>
</layout>
